@@ -1590,10 +1590,11 @@ int main(int argc, char *argv[])
 	if( strlen(config_output_folder) > 0 ) {
 		if( config_verbose )
 			printf("using output folder: %s\n", config_output_folder);
-		if( access(config_output_folder, F_OK) != 0 ) {
-			printf("output folder '%s' not found\n", config_output_folder);
-			cleanup_and_exit(1, "aborting");
-		}
+	}
+
+	if( !config_clear_output_folder && (access(config_output_folder, F_OK) == 0) ) {
+		printf("output folder '%s' found\n", config_output_folder);
+		cleanup_and_exit(1, "aborting");
 	}
 
 	append_string(&temp_folder, current_path);
